# Kerala-toddy-finder

./: CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml
.github/workflows/: backend-lint.yml  ci.yml  docker-publish.yml  frontend-lint.yml  semgrep.yml  thank-you.yml
toddy_shop_backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt
toddy_shop_backend/config/: settings.py  urls.py
toddy_shop_backend/core/: admin.py  urls.py  views.py
toddy_shop_backend/shared/: exceptions.py  models.py  permissions.py
toddy_shop_backend/shops/: admin.py  models.py  resources.py  views.py
toddy_shop_frontend/: package-lock.json  package.json  pnpm-lock.yaml
toddy_shop_frontend/src/app/: globals.css  layout.tsx  page.tsx
toddy_shop_frontend/src/app/community/: page.tsx
toddy_shop_frontend/src/app/explore/: page.tsx
toddy_shop_frontend/src/components/home/: HeroSection.tsx
toddy_shop_frontend/src/components/layout/: Navbar.tsx
toddy_shop_frontend/src/features/explore/: ExploreClient.tsx  MapView.tsx
toddy_shop_frontend/src/features/home/components/: DistrictExplorer.tsx  FeaturedBest.tsx  HeroSection.tsx  InteractiveMapSection.tsx  Navbar.tsx  kerala-paths.json
toddy_shop_frontend/src/features/shops/components/: ShopCard.tsx
